--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -1,26 +1,133 @@
- aside{
-    width: 160px;
-    height: 1440px;
-    float: left;
-    
-    position: fixed;
-    background-color: #FFFFFF;
-  }
-  #upperaside{
-    padding-top: 15px;
-    text-align: center;
-    background-color: hsla(239, 30%, 31%, 0.40);
-  }
-  
-  #upperaside > h2 {
-    padding-left: 10px;
-    display: inline-block;
-    font-size: 20px;
-    width: 60%;
-  }
-  
+ aside,
+ header,
+ main,
+ footer {
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   height: 900px;
+   width: 1440px;
+ }
 
-  header, main, footer {
-    margin-left: 290px;
-  }
-  
+ /* side bar settings */
+ aside {
+   width: 155px;
+   height: 900px;
+   text-align: left;
+   float: left;
+   position: fixed;
+   background-color: #FFFFFF;
+   color: #F13312;
+ }
+
+ #upperaside {
+   padding-top: 15px;
+   text-align: center;
+   background-color: hsla(239, 30%, 31%, 0.40);
+ }
+
+ #upperaside>img {
+   margin-right: 20px;
+ }
+
+ #upperaside>h2 {
+   padding-left: 10px;
+   padding-right: 2px;
+   margin-bottom: 10px;
+   font-weight: 500;
+   display: inline-block;
+   font-size: 20px;
+   color: #373867;
+ }
+
+ #optionsidebar {
+   font-size: 15px;
+   margin-top: 40px;
+   margin-left: 20px;
+ }
+
+ #optionsidebar>div {
+   margin-bottom: 25px;
+ }
+
+ #contactsidebar {
+   padding-top: 225px;
+   font-size: 10px;
+   margin-left: 10px;
+ }
+
+ #contactsidebar>h3 {
+   font-weight: bold;
+   font-size: 14px;
+   text-align: left;
+
+ }
+
+ .lineorange {
+   height: 2px;
+   width: 85px;
+   background: #F13312;
+   margin-bottom: 20px;
+ }
+
+ .icontext {
+   width: 95px;
+   text-align: left;
+   display: inline-block;
+   padding-left: 5px;
+   margin-bottom: 20px;
+ }
+
+ header,
+ main,
+ footer {
+   margin-left: 155px;
+ }
+
+ /* end side bar settings*/
+ /* header settings*/
+ header {
+   background-image: url(../assets/office.png);
+   
+ }
+
+ #textheader {
+  color: #FFFFFF;
+   position: absolute;
+   width: 481px;
+   height: 900px;
+   left: 183px;
+   background-color: rgba(0, 0, 0, 0.3);
+   backdrop-filter: blur(2px);
+   text-align: left;
+   margin-left: 160px;
+ }
+ #textheader > h1, div, h2, p{
+  margin-left: 22px;
+ }
+ #textheader > h1{
+  font-size: 40px;
+  font-weight: 500;
+  margin-top: 170px;
+ }
+ #textheader > h2{
+  font-size: 20px;
+  font-weight: 400;
+  margin-bottom: 85px;
+ }
+ #textheader > p{
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 300;
+  margin-bottom: 40px;
+  width: 350px;
+  color: rgba(255, 255, 255, 0.75);
+ }
+
+
+ .linegreen{
+  height: 2px;
+  background: #AACE9B;
+  margin-bottom: 20px;
+  margin-right: 7px;
+ }
+
+ /* end header settings*/
