--- a/Semana-02/css/style.css
+++ b/Semana-02/css/style.css
@@ -158,17 +158,20 @@
   font-size: 40px;
   color: black;
   font-weight: bold;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
  }
  .titlebar{
   height: 10px;
   margin-right: 100px;
   margin-left: 240px;
   background: #d9d9d9;
-  margin-bottom: 85px;
+  margin-bottom: 80px;
  }
+
  /*who we are settings*/
- 
+ #whoweare > h2{
+  margin-bottom: 15px;
+ }
 #whoweare{
   margin-top: 175px;
   margin-bottom: 400px;
@@ -190,9 +193,32 @@
   font-weight: 400;
 }
  /*end who we are settings*/
- /*why choose us settings*/
- 
-#whychooseus > h3{
-  text-align: left;
+ /*why choose us PRODUCTIVITY BOOSTER settings*/
+#whychooseus > h2{
+  margin-bottom: 5px;
 }
+.subtitle-bar-left{
+  height: 4px;
+  width: 825px;
+  /*margin-left: 160px;*/
+  background: #286276;
+  margin-bottom: 40px;
+  
+}
+
+.text-why-left{
+  display: inline-block;
+  width: 720px;
+  margin-top: 120px;
+  margin-left: 180px;
+  margin-right: 100px;
+  vertical-align: top;
+  font-size: 30px;
+  margin-bottom: 250px;
+}
+.img-why-right{
+  display: inline;
+  margin-top: 80px;
+}
+
  /*end why choose us settings*/
