BaSP-W02-2022: Fixed nomenclature issues

--- a/Semana-02/css/more-main-style.css
+++ b/Semana-02/css/more-main-style.css
@@ -1,6 +1,6 @@
 /* More sections settings*/
   #more-sections {
-    background-image: url(../assets/jj-ying-7JX0-bfiuxQ-unsplash\ 1.png);
+    background-image: url(../assets/more-sections.png);
     background-size: cover;
     height: 250px;
     text-align: center;
