--- a/Semana-03/css/general-style.css
+++ b/Semana-03/css/general-style.css
@@ -1,9 +1,11 @@
+ body {
+  width: 1440px;
+ }
  aside,
  header,
  main, footer {
    font-family: 'Roboto', sans-serif;
    font-style: normal;
-   /*height: 900px;*/
  }
  h2 {
    text-align: center;
@@ -17,8 +19,3 @@
  i {
    color: #F13312;
  }
- 
- 
- 
-
- 
