--- a/Semana-03/css/aside-style.css
+++ b/Semana-03/css/aside-style.css
@@ -1,11 +1,4 @@
 /* side bar settings */
-/*MOBILE SETTINGS*/
-@media only screen and (max-width: 480px){
-  aside{
-    display: none;
-  }
-}
-/*END MOBILE SETTINGS*/
 
 aside {
     position: fixed;
@@ -43,9 +36,9 @@ aside {
     margin-right: 20px;
     color: #373867;
   }
-  #upper-aside>h2 {
+  #upper-aside>p {
     display: inline-block;
-    padding-left: 10px;
+    padding-left: 5px;
     padding-right: 2px;
     margin-bottom: 10px;
     font-weight: 500;
@@ -59,33 +52,39 @@ aside {
   }
   #contact-aside {
     margin-left: 10px;
-    padding-top: 225px;
+    padding-top: 372px;
     font-size: 10px;
     color: #F13312;
   }
-  #contact-aside>h3 {
+  #contact-aside>p {
     font-weight: bold;
     font-size: 14px;
     text-align: left;
   }
   .contact-option {
+    display: flex;
     margin-bottom: 20px;
   }
   .menu-option {
-    margin-bottom: 50px;
+    display: flex;
+    margin-bottom: 30px;
   }
   .line-orange {
     margin-bottom: 20px;
     height: 2px;
     width: 85px;
     background: #F13312;
-    
   }
   .text-aside:hover, i:hover{
     color: #373867;
   }
-  main,
-  footer {
-    margin-left: 180px;
-  }
   /* end side bar settings*/
+
+  /*MOBILE SETTINGS*/
+@media only screen and (max-width: 480px){
+  aside{
+    display: none;
+    background-color: #F13312;
+  }
+}
+/*END MOBILE SETTINGS*/
