--- a/Semana-03/css/main-style.css
+++ b/Semana-03/css/main-style.css
@@ -1,4 +1,8 @@
 /*General settings main*/
+/*main,
+  footer {
+    padding-left: 180px;
+  }*/
 .title {
     margin-bottom: 5px;
     font-size: 40px;
