--- a/Semana-03/css/why-main-style.css
+++ b/Semana-03/css/why-main-style.css
@@ -1,5 +1,8 @@
 /*why choose us PRODUCTIVITY BOOSTER settings*/
-  #why-choose-us>div>h2 {
+#why-choose-us{
+  margin-left: 100px;
+}
+#why-choose-us>div>h2 {
     margin-bottom: 5px;
   }
   .subtitle-bar {
@@ -14,12 +17,15 @@
     margin-bottom: 40px;
     background: #d9d9d9;
   }
+  #productivity-section{
+    display: flex;
+  }
   .text-why-left {
-    display: inline-block;
-    width: 720px;
+    display: inline;
+    
     margin-top: 120px;
     margin-left: 180px;
-    margin-right: 100px;
+    margin-right: 80px;
     margin-bottom: 250px;
     vertical-align: top;
     font-size: 30px;
