--- a/Semana-03/css/header-style.css
+++ b/Semana-03/css/header-style.css
@@ -1,53 +1,48 @@
-/* header settings*/
-/*MOBILE SETTINGS*/
-@media only screen and (max-width: 480px){
-  
-}
-/*END MOBILE SETTINGS*/
-  header {
+header{
+    display: flex;
     height: 900px;
-    background-image: url(../assets/office.png);
     background-size: cover;
-  }
-  #text-header {
-    position: absolute;
-    width: 481px;
-    /*height: 900px;*/
-    margin-left: 260px;
+    background-image: url(../assets/office.png);
+}
+#text-header {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    height: 900px;
+    margin-left: 10%;
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(2px);
     color: #FFFFFF;
     text-align: left;
-  }
-  #text-header>h1,
-  #text-header>div,
-  #text-header>h2,
-  #text-header>p {
-    margin-left: 25px;
+}
+#text-header>h1,
+#text-header>div,
+#text-header>h2,
+#text-header>p {
+    margin-left: 5%;
     text-align: left;
-  }
-  #text-header>h1 {
-    padding-top: 170px;
+}
+#text-header>h1 {
+    margin-top: 30%;
     font-size: 40px;
     font-weight: 500;
-  }
-  #text-header>h2 {
-    margin-bottom: 85px;
+}
+#text-header>h2 {
+    margin-bottom: 20%;
     font-size: 20px;
     font-weight: 400;
-  }
-  #text-header>p {
-    width: 350px;
-    margin-bottom: 40px;
+}
+#text-header>p {
+    width: 75%;
+    margin-bottom: 15%;
     font-size: 16px;
     line-height: 30px;
     font-weight: 300;
     color: rgba(255, 255, 255, 0.75);
-  }
-  .line-green {
+}
+.line-green {
     height: 2px;
-    margin-bottom: 20px;
-    margin-right: 7px;
+    margin-bottom: 4%;
+    margin-right: 3%;
     background: #AACE9B;
-  }
-  /* end header settings*/
+}
