--- a/Semana-03/css/aside-style.css
+++ b/Semana-03/css/aside-style.css
@@ -1,7 +1,7 @@
 /* side bar settings */
 aside {
     /*position: i;*/
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     float: left;
     width: 12%;
@@ -20,38 +20,44 @@ aside {
 }
 .text-aside {
     width: 100px;
-    margin-left: 15px;
+    margin-left: 15%;
     color: #F13312;
 }
 #upper-aside {
+    display: flex;
     background-color: hsla(239, 30%, 31%, 0.40);
-    padding-top: 15px;
     text-align: center;
+    flex-direction: column;
 }
 #upper-aside>img {
-    margin-right: 20px;
+    margin-top: 5%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
-#upper-aside>i {
-    margin-right: 20px;
+#upper-aside > div{
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+#upper-aside i {
+    margin-right: 10%;
     color: #373867;
 }
-#upper-aside>p {
-    display: inline-block;
-    padding-left: 10px;
-    padding-right: 2px;
-    margin-bottom: 10px;
+#upper-aside p {
     font-weight: 500;
     font-size: 20px;
     color: #373867;
 }
 #option-aside {
-    margin-top: 80px;
-    margin-left: 20px;
+    margin-top: 40%;
+    margin-left: 20%;
     font-size: 15px;
 }
 #contact-aside {
-    margin-left: 10px;
-    padding-top: 225px;
+    margin-left: 15%;
+    padding-top: 140%;
     font-size: 10px;
     color: #F13312;
 }
