--- a/Semana-03/css/contact-main-style.css
+++ b/Semana-03/css/contact-main-style.css
@@ -4,27 +4,39 @@ form{
     font-size: 15px;
     color: #373867;
 }
+#name-contact-ls{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+#name-contact-ls > div{
+    width: 50%;
+}
 form > div {
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
+    flex-wrap: wrap;
+    width: 50%;
 }
-
 input, select{
-    width: 43%;
+    width: 100%;
     height: 31px;
-    margin-bottom: 8%;
+    margin-bottom: 5%;
     border-radius: 5px;
 }
 select{
+    margin-bottom: 1%;
     width: 39%;
 }
 label{
     margin-bottom: 1%;
 }
-
+#textarea{
+    width: 100%;
+}
 textarea{
-    width: 89%;
     height: 224px;
     border-radius: 5px;
     font-size: 15px;
@@ -32,12 +44,14 @@ textarea{
 button{
     border-radius: 5px;
     height: 47px;
+    border: none;
+    transition: 0.4s;
 }
 #btn-form{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 89%;
+    width: 100%;
     margin-top: 1%;
 }
 button[type=submit]{
@@ -52,4 +66,8 @@ button[type=reset]{
 #email-icon {
     margin-right: 5%;
     color: #373867;
+}
+button:hover{
+    cursor: pointer;
+    box-shadow: 1px 5px 5px  gray;
 }
