--- a/Semana-03/css/why-main-style.css
+++ b/Semana-03/css/why-main-style.css
@@ -4,6 +4,7 @@
     margin-bottom: 7%;
 }
 #subtitle-bar-blue{
+    margin-top: 2%;
     background: #286276;
 }
 #subtitle-bar-grey {
@@ -71,7 +72,6 @@
 .p-why-right {
     margin-left: 15%;
 }
-
 #traceability-section,
 #decision-making-section {
     padding-top: 14%;
@@ -84,9 +84,24 @@
 #management-section{
     padding-top: 14%;
 }
-
 #why-choose-us h3:hover {
     transition: 0.3s;
     cursor: pointer;
     color: #F13312;
+}
+@media only screen and (max-width: 480px){
+    .img-why-left-cont, .img-why-right-cont{
+        display: none;
+    }
+    .text-why-left, .text-why-right{
+        width: 95%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .subtitle-bar,#subtitle-bar-blue,
+    #subtitle-bar-grey,.subtitle-bar-right{
+        margin-left: 0;
+        margin-right: 0;
+        width: 100%;
+    }
 }
