--- a/Semana-03/css/func-main-style.css
+++ b/Semana-03/css/func-main-style.css
@@ -69,3 +69,18 @@
         margin-right: 0;
     }
 }
+@media only screen and (max-width: 768px){
+    #hours-log,
+    #resource-management,
+    #reports,
+    #multiple-roles{
+        display: inline-flex;
+        flex-direction: column;
+    }
+    .text-functionalities{
+        text-align: center;
+    }
+    .img-functionalities{
+        margin-right: 0;
+    }
+}
