--- a/Semana-03/css/contact-main-style.css
+++ b/Semana-03/css/contact-main-style.css
@@ -21,7 +21,7 @@ form > div {
     width: 50%;
 }
 input, select{
-    width: 100%;
+    width: 98%;
     height: 31px;
     margin-bottom: 5%;
     border-radius: 5px;
@@ -74,4 +74,46 @@ button[type=reset]{
 button:hover{
     cursor: pointer;
     box-shadow: 1px 5px 5px  gray;
+}
+@media only screen and (max-width: 480px){
+    #name-contact-ls{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 100%;
+    }
+    #name-contact-ls > div{
+        width: 100%;
+        margin-bottom: 4%;
+    }
+    select{
+        width: 100%;
+    }
+    form > div {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 4%;
+    }
+    textarea{
+        height: 110px;
+        border-radius: 5px;
+        font-size: 15px;
+    }
+    button[type=submit]{
+        width: 35%;
+    }
+    button[type=reset]{
+        width: 20%;
+    }
+}
+@media only screen and (max-width: 768px){
+    button[type=submit]{
+        width: 35%;
+    }
+    button[type=reset]{
+        width: 20%;
+    }
 }
