--- a/Semana-03/css/aside.css
+++ b/Semana-03/css/aside.css
@@ -3,6 +3,8 @@ aside {
     display: flex;
     flex-direction: column;
     flex: 1 0 13%;
+    justify-content: space-between;
+    height: 100vh;
     background-color: #FFFFFF;
     text-align: left;
     max-width: 188px;
@@ -56,14 +58,14 @@ aside {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     font-size: 15px;
 }
 #contact-aside {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 190px;
+    /* padding-top: 190px; */
     font-size: 10px;
     color: #F13312;
 }
